frontend/test/should_pass/basic_203.grg
rule r {
	pattern {
		negative {
			if{ false; }
		}
	}
	modify {
	}
}

