frontend/test/should_fail/inh_attrib_007.grg
using inh_attrib_model_007;

rule r {
	pattern {
	}
	replace {
	}
}

